--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-typescript-starter",
-    "homepage": "homepage",
+    "homepage": "https://sean8000.github.io/Section-10_Team11",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
