--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-typescript-starter",
-    "homepage": "https://sean8000.github.io/Section-10_Team11",
+    "homepage": "homepage",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -28,7 +28,7 @@
         "test:cov": "react-scripts test --coverage --watchAll",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -b main -d build",
+        "deploy": "gh-pages -d build",
         "lint": "eslint ./src --ext .tsx --ext .ts --max-warnings 0",
         "format": "prettier --config .prettierrc --write src/**/*.{ts,tsx}"
     },
